--- a/Homework21/Task2/style.css
+++ b/Homework21/Task2/style.css
@@ -77,8 +77,9 @@ h1 {
 }
 
 .container-body {
-    text-align: left;
-    padding: 15px;
+  width: 100%;
+  text-align: left;
+  padding: 15px 0;
 }
 
 .container-remove {
@@ -86,21 +87,40 @@ h1 {
 }
 
 .my-tasks {
-  padding: 5px;
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  padding: 15px 0;
 }
 
-.my-tasks p {
+.my-tasks input {
   display: inline;
   font-size: 16px;
   margin: 0;
+  outline: none;
+  border: none;
+  background-color: inherit;
+  width: 80%;
+  padding: 5px 0;
+  margin-left: 5px;
 }
 
-.task-icons {
-    float: right;
+.iconBtnDiv {
+  display: flex;
+  justify-content: space-evenly;
+  float: right;
+  width: 20%;
 }
 
-.task-icons i {
+.iconBtnDiv button {
     cursor: pointer;
+    background-color: inherit;
+    border: none;
+    padding: 0;
+}
+
+.task-input {
+  border-radius: 7px;
 }
 
 .fa-check {
