feat(hwk): add task 4,5 : modified 2,3

--- a/Homework21/Task2/style.css
+++ b/Homework21/Task2/style.css
@@ -106,6 +106,7 @@ h1 {
   background-color: inherit;
   border: none;
   padding: 0;
+  width: 15px;
 }
 
 .task-input {
@@ -121,16 +122,17 @@ h1 {
   margin-left: 5px;
 }
 
-.fa-check {
+.submit-icon {
   color: green;
-  margin-right: 10px;
+  width: 100%;
 }
 
-.fa-edit {
+.edit-icon {
   color: blue;
-  margin-right: 10px;
+  width: 100%;
 }
 
-.fa-times {
+.remove-icon {
   color: red;
+  width: 100%;
 }
