--- a/Homework21/Task3/style.css
+++ b/Homework21/Task3/style.css
@@ -1,21 +1,28 @@
 * {
   box-sizing: border-box;
 }
-.mySlides1,
-.mySlides2 {
+
+body {
+  font-family: Verdana, sans-serif;
+  margin: 0;
+}
+
+img {
   display: none;
 }
+
 img {
   vertical-align: middle;
 }
 
 /* Slideshow container */
 .slideshow-container {
-  max-width: 1000px;
+  width: 100%;
   position: relative;
   margin: auto;
 }
 
+/* Next & previous buttons */
 .prev,
 .next {
   cursor: pointer;
@@ -38,9 +45,34 @@ img {
   border-radius: 3px 0 0 3px;
 }
 
-/* On hover, add a grey background color */
+/* On hover, add a black background color with a little bit see-through */
 .prev:hover,
 .next:hover {
-  background-color: #f1f1f1;
-  color: black;
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active,
+.dot:hover {
+  background-color: #717171;
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+
+  .prev,
+  .next {
+    font-size: 11px;
+  }
 }
