--- a/22.Fetch-API/1.Select-with-dog-breeds/style.css
+++ b/22.Fetch-API/1.Select-with-dog-breeds/style.css
@@ -1,10 +1,24 @@
-div {
+body {
+  margin: 0;
+}
+
+.content {
   width: 100%;
+  margin-top: 100px;
 }
 
 select {
   display: block;
-  width: 230px;
+  width: 250px;
   margin: 0 auto;
   padding: 5px 2px;
+}
+
+.img-div {
+  text-align: center;
+  margin-top: 50px;
+}
+
+.img-div img {
+  width: 400px;
 }
